add favicon and logo to the project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Bookmarklet editor</title>
+		<link rel="icon" href="/logo.svg">
 		<script type="module" src="/src/index.ts"></script>
 	</head>
 	<body class="loading"><div id="app"></div></body>
